[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/vehicle.gd" type="Script" id=1]
[ext_resource path="res://textures/bugs/glow.png" type="Texture" id=2]
[ext_resource path="res://textures/bugs/w.png" type="Texture" id=3]
[ext_resource path="res://textures/bugs/0.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 9.47163

[node name="vehicle" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4.42959 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="glow" type="Sprite" parent="."]

visibility/visible = false
visibility/opacity = 0.2
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="w" type="Sprite" parent="."]

transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
modulate = Color( 0.195312, 1, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 4.42959 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="h_rot" type="Node2D" parent="."]

editor/display_folded = true

[node name="health" type="Node2D" parent="h_rot"]

editor/display_folded = true
transform/pos = Vector2( 0, 27 )

[node name="healthSS" type="Label" parent="h_rot/health"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -8.0
margin/right = 20.0
margin/bottom = 23.0
custom_colors/font_color = Color( 0.908691, 1, 0.65625, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lifetimeSS" type="Label" parent="h_rot/health"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = 24.0
margin/right = 20.0
margin/bottom = 38.0
custom_colors/font_color = Color( 0.410639, 0.882812, 0.406921, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dnaSS" type="Label" parent="h_rot/health"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -21.0
margin/top = 7.0
margin/right = 19.0
margin/bottom = 38.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "[5 -5]"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="nameSS" type="Label" parent="h_rot/health"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -39.0
margin/top = -57.0
margin/right = 40.0
margin/bottom = -26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "5"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


